<resources>
    <string name="app_name">Calculator</string>
    <string name="clear_button">C</string>
    <string name="plus_minus_button">+/-</string>
    <string name="percent_button">%</string>
    <string name="divide_button">/</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="multiply_button">X</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="subtract_button">-</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="add_button">+</string>
    <string name="zero_button">0</string>
    <string name="decimal_button">.</string>
    <string name="equals_button">=</string>
    <string name="calculator_strings">2</string>
    <string name="error_message">Error</string>
    <string name="sin_button">sin</string>
    <string name="cos_button">cos</string>
    <string name="tan_button">tan</string>
    <string name="log10_button">Log 10</string>
    <string name="ln_button">ln</string>
</resources>