...
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:layout_margin="2dp">

    <TextView
        android:id="@+id/calculator_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="80sp"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:lines="2"
...
